Add annotations under annotations

--- a/charts/unbound/templates/service.yaml
+++ b/charts/unbound/templates/service.yaml
@@ -11,6 +11,7 @@ metadata:
     {{- with .Values.service.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
+  annotations:
     {{- with .Values.service.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
